index.css
html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

body {
  background-color: #d9d9d9;
  height: 100vh;
  margin: 0;
  font-family: "Jetbrains Mono", monospace;
  --primary-color: #1e1e1e;
  --secondary-color: #ecd264;
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  padding-left: 3rem;
  padding-right: 3rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 1.25rem;
  border-radius: 9999px;
  border-style: solid;
  font-family: inherit;
  cursor: pointer;
}

.landing {
  background-color: var(--primary-color);
  height: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  color: white;
}

.nav-container {
  height: 20vh;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.landing-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 80vh;
  width: 100%;
}

.nav-pages {
  display: flex;
  flex-direction: row;
}

.nav-item {
  margin-left: 2.25rem;
  margin-right: 2.25rem;
  font-size: 1.25rem;
}

.nav-item:hover {
  text-decoration-line: underline;
  text-decoration-thickness: 2px;
  text-underline-offset: 2px;
}

.img-logo {
  height: 100px;
  width: 100px;
  margin-right: 1rem;
}

.text-logo {
  font-size: 2rem;
  font-weight: bold;
  margin-left: 1rem;
}

.top-left-logo {
  display: flex;
  justify-content: center;
  align-items: center;
}

.top-right-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}

.button-signup {
  border-color: var(--secondary-color);
  border-width: 0.25rem;
  background-color: var(--secondary-color);
  margin-right: 1rem;
}

.button-login {
  border-color: white;
  border-width: 0.25rem;
  background-color: var(--primary-color);
  color: white;
  margin-left: 1rem;
}

.button-signup:hover {
  box-shadow:
    0 0 10px var(--secondary-color),
    0 0 20px var(--secondary-color),
    0 0 40px var(--secondary-color);
}

.button-login:hover {
  box-shadow:
    0 0 10px white,
    0 0 20px white,
    0 0 40px white;
}

.landing-text {
  margin: 0;
  padding: 0;
  width: 28rem;
  text-wrap: wrap;
}

.text-large {
  font-size: 7rem;
}

.text-medium {
  font-size: 3.5rem;
}

.landing-left-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.landing-right-img {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10rem;
}

.landing-img {
  height: 32rem;
}

.landing-center-content {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  height: 100%;
  width: 100%;
}

.action-button {
  border-color: white;
  border-width: 0.25rem;
  background-color: var(--primary-color);
  color: white;
}

.action-button:hover {
  box-shadow:
    0 0 10px white,
    0 0 20px white,
    0 0 40px white;
}

.action-button-black {
  border-color: var(--primary-color);
  border-width: 0.25rem;
  background-color: var(--primary-color);
  color: white;
}

.action-button-black:hover {
  border-color: white;
  background-color: white;
  color: var(--secondary-color);
  border-width: 0.25rem;
  box-shadow:
    0 0 20px var(--secondary-color),
    0 0 40px var(--secondary-color),
    0 0 80px var(--secondary-color);
}

section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: white;
  width: 100%;
  color: var(--primary-color);
}

.section-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-top: 10rem;
  padding-bottom: 10rem;
  padding-left: 12rem;
  padding-right: 12rem;
}

.section-title {
  font-size: 2.5rem;
  font-weight: bolder;
}

.vision-mission {
  text-align:center;
  font-size: 2rem;
}

.gradient-text {
  background: linear-gradient(to right, #FF75C3, #FFA647, #FFE83F, #9FFF5B, #70E2FF, #CD93FF);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.section-partner {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-evenly;
}

.partner-logo {
  height: 6rem;
}

.accordion {
  background-color: white;
  color: var(--primary-color);
  cursor: pointer;
  padding: 1.25rem;
  font-size: 1.25rem;
  font-weight: bolder;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  border-radius: 0.5rem;
}

.active, .accordion:hover {
  background-color: #ccc;
}

.panel {
  font-size: 1rem;
  padding: 0 18px;
  background-color: white;
  overflow: hidden;
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

.accordion:after {
  content: '\02795'; 
  font-size: 13px;
  color: #777;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2796"; 
}

.panel {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.footer {
  background-color: var(--primary-color);
  height: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.footer-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top:5rem
}

.footer-icons {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  height: 2.5rem;
  width: 24rem;
}

.footer-icon {
  height: 2.5rem;
  width: 2.5rem;
  color: white;
}

.footer-bottom {
  margin-top: 5rem;
}

